[metadata]
name = bootplot
url = https://github.com/davidnabergoj/bootstrap-your-plot
author = David Nabergoj, Erik Štrumbelj,
author_email = davidnabergoj4@gmail.com,
version = attr: bootplot.__version__.__version__
description = bootplot is a package for uncertainty visualization
long_description = file: README.md, LICENSE
keywords =
    bootplot
    visualization
    uncertainty
    bootstrap
license = MIT
license_files = file: LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Visualization
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
download_url = https://github.com/davidnabergoj/bootstrap-your-plot/archive/refs/tags/v0.0.1.tar.gz
project_urls =
    Bug Tracker = https://github.com/davidnabergoj/bootstrap-your-plot/issues

[options]
packages = find:
python_requires = >=3.7, <4
install_requires =
    numpy
    imageio
    imageio-ffmpeg
    matplotlib
    tqdm
    pillow
    scipy
    scikit-image
    opencv-python
    networkx


[options.packages.find]
where = .