[metadata]
name = bootplot
url = https://github.com/davidnabergoj/bootplot
author = David Nabergoj, Erik Štrumbelj,
author_email = davidnabergoj4@gmail.com,
version = attr: bootplot.__version__.__version__
description = bootplot is a package for black-box uncertainty visualization.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    bootplot
    visualization
    uncertainty
    bootstrap
license = MIT
license_files = file: LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Visualization
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
download_url = https://github.com/davidnabergoj/bootplot/releases
project_urls =
    Bug Tracker = https://github.com/davidnabergoj/bootplot/issues

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    imageio
    imageio-ffmpeg
    matplotlib
    tqdm
    pillow
    scipy
    scikit-image
    scikit-learn
    opencv-python
    networkx


[options.packages.find]
where = .
